# fast_transpose

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build_push.yml  publish_release.yml
app/: Cargo.toml
app/benches/plane/: main.rs
app/benches/rgb/: main.rs
app/benches/rgba/: main.rs
app/src/: main.rs
fuzz/: Cargo.toml
fuzz/cbcr8/: cbcr8.rs
fuzz/cbcr_f32/: cbcr_f32.rs
fuzz/plane16/: plane16.rs
fuzz/plane8/: plane8.rs
fuzz/plane_f32/: plane_f32.rs
fuzz/rgba16/: rgba16.rs
fuzz/rgba8/: rgba8.rs
src/: cbcr8.rs  common.rs  flip.rs  float32_cbcr_invoker.rs  float32_invoker.rs  float_32.rs  flop.rs  lib.rs  plane16.rs  plane8.rs  rgba16.rs  rgba8.rs  rotate180.rs  transpose_arbitrary.rs  transpose_arbitrary_group.rs  unsigned_16.rs  unsigned_8.rs  utils.rs
src/avx/: f32x2_4x4.rs  mod.rs  transpose_8x8_f32.rs  u16x4_4x4.rs  x8_f32.rs  x8_u32.rs
src/avx512/: mod.rs  x16_u32.rs
src/neon/: f32x2_2x2.rs  f32x2_4x4.rs  mod.rs  transpose_16x16_u8.rs  transpose_4x4_f32.rs  transpose_8x8_u16.rs  transpose_8x8_u8.rs  u16_4x4.rs  u16_8x8.rs  u16x4_2x2.rs  u16x4_4x4.rs  u8_16x16.rs  u8_8x8.rs  u8x2_4x4.rs  u8x2_8x8.rs  utils.rs  x4_f32.rs  x4_u32.rs  x8_f32.rs  x8_u32.rs
src/sse/: f32x2_2x2.rs  fast_u8x4_by1x4.rs  mod.rs  packing.rs  packing_16.rs  packing_32.rs  transpose_4x4_f32.rs  transpose_8x8.rs  transpose_8x8_u16.rs  u16_4x4.rs  u16_8x8.rs  u16x4_2x2.rs  u8_8x8.rs  u8x2_4x4.rs  u8x2_8x8.rs  utils.rs  vld.rs  x4_f32.rs  x4_u32.rs  x8_f32.rs  x8_u32.rs
