[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.25.5" }
fast_transpose = { path = "..", default-features = false, features = ["unsafe", "sse", "neon"] }
transpose = "0.2.3"
bytemuck = "1.19.0"
yuv-sys = "0.3.7"

[features]
nightly_avx512 = ["fast_transpose/nightly_avx512"]

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "plane"
harness = false

[[bench]]
name = "rgb"
harness = false

[[bench]]
name = "rgba"
harness = false