[package]
name = "app-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.fast_transpose]
path = ".."

[[bin]]
name = "plane16"
path = "plane16/plane16.rs"
test = false
doc = false
bench = false

[[bin]]
name = "plane8"
path = "plane8/plane8.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rgba8"
path = "rgba8/rgba8.rs"
test = false
doc = false
bench = false
