[package]
name = "app-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.fast_transpose]
path = ".."

[features]
neon = ["fast_transpose/neon"]
avx = ["fast_transpose/avx"]
sse = ["fast_transpose/sse"]
avx512 = ["fast_transpose/nightly_avx512"]

[[bin]]
name = "plane16"
path = "plane16/plane16.rs"
test = false
doc = false
bench = false

[[bin]]
name = "plane8"
path = "plane8/plane8.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cbcr8"
path = "cbcr8/cbcr8.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rgba8"
path = "rgba8/rgba8.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rgba16"
path = "rgba16/rgba16.rs"
test = false
doc = false
bench = false

[[bin]]
name = "plane_f32"
path = "plane_f32/plane_f32.rs"
test = false
doc = false
bench = false